# TensionEngine

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/tension/: core.h
core/include/tension/core/: app.h  eventloop.h  global.h  platform.h
core/src/: app.cpp  app.h  platform.cpp  platform.h  platform_windows.cpp  platform_windows.h
glew/: CMakeLists.txt
output/include/tension/core/: app.h
output/lib/: TensionCore.lib  TensionCoreStatic.lib
test/: CMakeLists.txt
test/src/: main.cpp
wiki/: QuickStart.md
